<resources>
    <string name="app_name">CreativeCompanion</string>
    <string name="medium">Medium</string>
    <string name="paper">paper</string>
    <string name="drawing">drawing</string>
    <string name="canvas">canvas</string>
    <string name="tools">tools</string>
    <string name="projects">projects</string>
    <string name="mood">mood</string>
    <string name="home">home</string>
    <string name="favorite">favorite</string>
    <string name="todo">todo</string>
    <string name="idea">idea</string>
    <string name="color">color</string>
    <string name="title">title</string>
    <string name="add_entry">Add Entry</string>
    <string name="enter_website">Enter Website</string>
    <string name="enter_quantity">Enter Quantity</string>
    <string name="enter_size">Enter Size</string>
    <string name="enter_description">Enter Description</string>
    <string name="enter_brand">Enter Brand</string>
    <string name="enter_type">Enter Type</string>
    <string name="paint">paint</string>
    <string name="project_ideas">Project Ideas</string>
    <string name="coming_soon">Coming Soon</string>
</resources>